Restore Windows/Java 8 compatibility